--- a/game/static/game/profile.html
+++ b/game/static/game/profile.html
@@ -6,6 +6,8 @@
 
 {% block content %}
 
+<h2>{{ user.username }}</h2>
+
 <div style="text-align: center">{% cloudinary profile.userprofilepicture.picture %}</div>
 
 <h2>{% trans "Change profile picture" %}</h2>
