Traducción de consumidor

--- a/game/static/game/game_phaser.html
+++ b/game/static/game/game_phaser.html
@@ -73,7 +73,8 @@
        "This card is not of a suitable suit!": language == "es" ? "¡Esta carta no es del Palo correcto!" : "This card is not of a suitable suit!",
        "Cannot switch!": language == "es" ? "¡No puedes cambiar de palo!" : "Cannot switch!",
        "Not enough players!": language == "es" ? "¡No hay los suficientes jugadores!" : "Not enough players!",
-       "You already played a card this turn!": language == "es" ? "¡Ya has jugado una carta este turno!" : "You already played a card this turn!"
+       "You already played a card this turn!": language == "es" ? "¡Ya has jugado una carta este turno!" : "You already played a card this turn!",
+       "It's not your turn!": language == "es" ? "¡No es tu turno!" : "It's not your turn!"
     }
 
     // Websocket al servidor
